<resources>
    <string name="app_name">LazyLoading</string>
    <string name="name">Username</string>
    <string name="movie_you_want_to_watch">Movie You Want To Watch</string>
    <string name="age">Age</string>
    <string name="favourite_genre">Favourite Genre</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_like_anime">Do you like Anime ?</string>
    <string name="submit">Submit</string>
    <string name="upload_image">Upload Image</string>
    <string name="lazy_loading">Lazy Loading</string>
    <string name="display_data">Display Data</string>
</resources>