<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/app_bg"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/app_bar"
        android:outlineAmbientShadowColor="@color/widget_color"
        android:outlineSpotShadowColor="@color/widget_color">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/lazy_loading"
                    android:textColor="@color/app_bg"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/name"
            app:boxStrokeColor="@color/widget_color"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            android:layout_marginTop="10dp"
            app:hintTextColor="#696969"
            android:textColorHint="@color/grey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:imeOptions="actionNext"
                android:singleLine="true"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/movie_you_want_to_watch"
            android:layout_below="@+id/name"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/widget_color"
            app:hintTextColor="#696969"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/age"
            android:layout_below="@+id/movie_name"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/widget_color"
            app:hintTextColor="#696969"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/favourite_genre"
            android:layout_below="@+id/age"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/widget_color"
            app:hintTextColor="#696969"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genre_liked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genre"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_like_anime"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="10dp"/>

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="18sp"
                android:buttonTint="@color/widget_color"
                android:textColor="@color/grey"
                android:layout_marginEnd="20dp"
                android:onClick="onRadioBtnClick"/>

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="18sp"
                android:buttonTint="@color/widget_color"
                android:textColor="@color/grey"
                android:onClick="onRadioBtnClick"/>

        </RadioGroup>

        <Button
            android:id="@id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:text="@string/upload_image"
            android:textStyle="bold" />


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/upload_image"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/widget_color"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/submit"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/widget_color"
            android:text="@string/display_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>



</LinearLayout>